--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://mukeshnmight:mukesh7462@cluster0.3ugupda.mongodb.net/chessData
 PORT=5000
 JWT_SECRET=your_jwt_secret_key
+CLIENTURL=https://mukhiyachessapp.netlify.app/
