some designed and randomjoin

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGO_URI=mongodb+srv://mukeshnmight:mukesh7462@cluster0.3ugupda.mongodb.net/chessData
 PORT=5000
 JWT_SECRET=your_jwt_secret_key
-CLIENTURL=https://mukhiyachessapp.netlify.app
-# CLIENTURL=http:localhost:3000
+CLIENTURL=https://mukhiyachessapp.netlify.app?
+# CLIENTURL=http://localhost:3000
